@startuml
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

title Практика 4: Singleton и альтернатива через DI

package "Вариант 1: классический Singleton" {
  class ApplicationConfiguration <<Singleton>> {
    - static volatile instance
    - static volatile source
    - data: ConfigurationData
    + getInstance(): ApplicationConfiguration
    + notificationProviderType(): String
    + auditEnabled(): boolean
    + setSourceForTests(source)
    + resetForTests()
  }

  class SingletonNotificationAuditor <<Singleton>> {
    + getInstance(): InMemoryNotificationAuditor
    + resetForTests()
  }

  class SingletonNotificationService {
    + send(request): NotificationResult
  }

  SingletonNotificationService ..> ApplicationConfiguration : global getInstance()
  SingletonNotificationService ..> SingletonNotificationAuditor : global getInstance()
}

package "Общие контракты" {
  interface ConfigurationSource {
    + load(): ConfigurationData
  }
  class EnvironmentConfigurationSource
  class ConfigurationData {
    - notificationProviderType: String
    - auditEnabled: boolean
  }
  interface NotificationAuditor {
    + record(record)
    + records(): List<AuditRecord>
  }
  class InMemoryNotificationAuditor
  record AuditRecord
  record NotificationRequest
  record NotificationResult

  EnvironmentConfigurationSource ..|> ConfigurationSource
  InMemoryNotificationAuditor ..|> NotificationAuditor
  ConfigurationSource ..> ConfigurationData : creates
  NotificationAuditor ..> AuditRecord
}

package "Вариант 2: единый жизненный цикл без глобального доступа" {
  class ApplicationContainer <<Composition Root>> {
    - configuration: ConfigurationData
    - auditor: InMemoryNotificationAuditor
    - notificationService: InjectedNotificationService
    + configuration(): ConfigurationData
    + auditor(): NotificationAuditor
    + notificationService(): InjectedNotificationService
  }

  class InjectedNotificationService {
    - configuration: ConfigurationData
    - auditor: NotificationAuditor
    + send(request): NotificationResult
  }

  ApplicationContainer ..> ConfigurationSource : load once
  ApplicationContainer *-- ConfigurationData
  ApplicationContainer *-- InMemoryNotificationAuditor
  ApplicationContainer *-- InjectedNotificationService
  InjectedNotificationService --> ConfigurationData : constructor
  InjectedNotificationService --> NotificationAuditor : constructor
}
@enduml
